--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,13 @@ jobs:
         node:
           - 10
           - 12
+          - 13
           - 14
-        # Test with Ubuntu and macOS
+        # Test with Ubuntu, macOS, and Windows
         os:
           - ubuntu-latest
           - macos-latest
+          - windows-latest
     name: Node.js v${{ matrix.node }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     steps:
